# university-scraper

./: .gitignore  README.md  pyproject.toml
examples/: auto_scraper_example.py  mlscraper_example.py
