[project]
name = "university-scrapers"
version = "0.1.0-alpha.1"
description = "University Website Scraperes"
authors = [
    {name = "QuantTide", email = "opensource@quanttide.com"},
]
dependencies = [
    "autoscraper>=1.1.14",
    "mlscraper>=1.0.0rc3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache 2.0"}


[tool.pdm]
distribution = false
